# gzdec

./: README.md  autogen.sh  configure.ac
.github/workflows/: build.yml
src/: Makefile.am  gstgzdec.c  gstgzdec.h  gstgzdec0.1.c  gstgzdec0.1.h
